# helipad_det

./: .gitignore  CMakeLists.txt  README.md  package.xml
.catkin_tools/profiles/default/: devel_collisions.txt
cfg/: Params.yaml  canny_params.yaml  params.yaml
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_simple/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/helipad_det/: .catkin
devel/.private/mav_comm/: .catkin  .rosinstall  setup.sh
devel/.private/mav_msgs/: .catkin  local_setup.sh
devel/.private/mav_planning_msgs/: .catkin  .rosinstall  local_setup.sh
devel/.private/mav_state_machine_msgs/: .catkin
devel/.private/mav_system_msgs/: .catkin
devel/.private/mav_utils/: .catkin  .rosinstall  setup.sh
devel/.private/mav_utils_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/ocam/: .catkin  .rosinstall
devel/.private/usb_cam/: .catkin  local_setup.sh
devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
devel/include/mav_planning_msgs/: ChangeNameService.h  ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerService.h  PlannerServiceRequest.h  PlannerServiceResponse.h  Point2D.h  PointCloudWithPose.h  Polygon2D.h  PolygonService.h  PolygonServiceRequest.h  PolygonServiceResponse.h  PolygonWithHoles.h  PolygonWithHolesStamped.h  PolynomialSegment.h  PolynomialSegment4D.h  PolynomialTrajectory.h  PolynomialTrajectory4D.h
devel/include/mav_state_machine_msgs/: RunTaskService.h  RunTaskServiceRequest.h  RunTaskServiceResponse.h  StartStopTask.h
devel/include/mav_system_msgs/: CpuInfo.h  ProcessInfo.h
devel/include/mav_utils_msgs/: BBPose.h  BBPoses.h  BBox.h  BBoxes.h  RouterData.h  RouterInfo.h  TaskInfo.h  UTMPose.h  signal.h  signalRequest.h  signalResponse.h
devel/include/ocam/: camConfig.h
devel/lib/helipad_det/: hdetect
devel/lib/mav_utils/: controller_switch_node  geoid_test  lander  state_estimation_node
devel/lib/ocam/: ocam
devel/lib/pkgconfig/: catkin_simple.pc  catkin_tools_prebuild.pc  helipad_det.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  mav_utils.pc  mav_utils_msgs.pc  ocam.pc  usb_cam.pc
devel/lib/usb_cam/: usb_cam_node
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig-version.cmake  catkin_simpleConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/helipad_det/cmake/: helipad_detConfig-version.cmake  helipad_detConfig.cmake
devel/share/mav_msgs/cmake/: mav_msgs-msg-extras.cmake  mav_msgs-msg-paths.cmake  mav_msgsConfig-version.cmake  mav_msgsConfig.cmake
devel/share/mav_planning_msgs/cmake/: mav_planning_msgs-msg-extras.cmake  mav_planning_msgs-msg-paths.cmake  mav_planning_msgsConfig-version.cmake  mav_planning_msgsConfig.cmake
devel/share/mav_state_machine_msgs/cmake/: mav_state_machine_msgs-msg-extras.cmake  mav_state_machine_msgs-msg-paths.cmake  mav_state_machine_msgsConfig-version.cmake  mav_state_machine_msgsConfig.cmake
devel/share/mav_system_msgs/cmake/: mav_system_msgs-msg-extras.cmake  mav_system_msgs-msg-paths.cmake  mav_system_msgsConfig-version.cmake  mav_system_msgsConfig.cmake
devel/share/mav_utils/cmake/: mav_utilsConfig-version.cmake  mav_utilsConfig.cmake
include/helipad_det/: Distance.h  Normalize.h  PoseEstimation.h  Preprocess.h  Signature Matching.h  Signature Processing.h  isSimilar.h  pose_estimation.h  preprocess.h  signMatch.h  signature_matching.h  signature_processing.h
launch/: hdetect.launch  test1.launch
logs/helipad_det/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr
logs/mav_comm/: build.cmake.000.log.stderr
logs/mav_state_machine_msgs/: build.cmake.000.log.stderr
logs/mav_utils/: build.cmake.000.log.stderr
logs/mav_utils_msgs/: build.cmake.000.log.stderr
logs/ocam/: build.cmake.000.log.stderr
logs/usb_cam/: build.cmake.000.log.stderr
src/: detect.cpp  hdetect.cpp  test1.cpp  test_vid.cpp
srv/: signal.srv
(+401 files in other folders)
