<?xml version="1.0"?>
<package format="2">
  <name>helipad_det</name>
  <version>0.0.0</version>
  <description>The hdetect package</description>
  <maintainer email="kabeer@iitk.ac.in">kabeer</maintainer>
  <maintainer email="amartya@iitk.ac.in">kabeer</maintainer>
  <maintainer email="tanays@iitk.ac.in">kabeer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>opencv</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <export>  </export>
  
</package>
